stage9new/y.output
Terminals unused in grammar

   '+'
   '*'


State 26 conflicts: 2 shift/reduce
State 27 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: slist NEWLINE

    2 slist: slist stmt
    3      | stmt

    4 stmt: ID ASGN expr ';'
    5     | READ '(' ID ')' ';'
    6     | WRITE '(' expr ')' ';'

    7 expr: expr PLUS expr
    8     | expr MUL expr
    9     | '(' expr ')'
   10     | NUM
   11     | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 9
')' (41) 5 6 9
'*' (42)
'+' (43)
';' (59) 4 5 6
error (256)
ID (258) 4 5 11
READ (259) 5
NUM (260) 10
ASGN (261) 4
NEWLINE (262) 1
WRITE (263) 6
PLUS (264) 7
MUL (265) 8


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
Program (17)
    on left: 1, on right: 0
slist (18)
    on left: 2 3, on right: 1 2
stmt (19)
    on left: 4 5 6, on right: 2 3
expr (20)
    on left: 7 8 9 10 11, on right: 4 6 7 8 9


State 0

    0 $accept: . Program $end

    ID     shift, and go to state 1
    READ   shift, and go to state 2
    WRITE  shift, and go to state 3

    Program  go to state 4
    slist    go to state 5
    stmt     go to state 6


State 1

    4 stmt: ID . ASGN expr ';'

    ASGN  shift, and go to state 7


State 2

    5 stmt: READ . '(' ID ')' ';'

    '('  shift, and go to state 8


State 3

    6 stmt: WRITE . '(' expr ')' ';'

    '('  shift, and go to state 9


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 5

    1 Program: slist . NEWLINE
    2 slist: slist . stmt

    ID       shift, and go to state 1
    READ     shift, and go to state 2
    NEWLINE  shift, and go to state 11
    WRITE    shift, and go to state 3

    stmt  go to state 12


State 6

    3 slist: stmt .

    $default  reduce using rule 3 (slist)


State 7

    4 stmt: ID ASGN . expr ';'

    ID   shift, and go to state 13
    NUM  shift, and go to state 14
    '('  shift, and go to state 15

    expr  go to state 16


State 8

    5 stmt: READ '(' . ID ')' ';'

    ID  shift, and go to state 17


State 9

    6 stmt: WRITE '(' . expr ')' ';'

    ID   shift, and go to state 13
    NUM  shift, and go to state 14
    '('  shift, and go to state 15

    expr  go to state 18


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    1 Program: slist NEWLINE .

    $default  reduce using rule 1 (Program)


State 12

    2 slist: slist stmt .

    $default  reduce using rule 2 (slist)


State 13

   11 expr: ID .

    $default  reduce using rule 11 (expr)


State 14

   10 expr: NUM .

    $default  reduce using rule 10 (expr)


State 15

    9 expr: '(' . expr ')'

    ID   shift, and go to state 13
    NUM  shift, and go to state 14
    '('  shift, and go to state 15

    expr  go to state 19


State 16

    4 stmt: ID ASGN expr . ';'
    7 expr: expr . PLUS expr
    8     | expr . MUL expr

    PLUS  shift, and go to state 20
    MUL   shift, and go to state 21
    ';'   shift, and go to state 22


State 17

    5 stmt: READ '(' ID . ')' ';'

    ')'  shift, and go to state 23


State 18

    6 stmt: WRITE '(' expr . ')' ';'
    7 expr: expr . PLUS expr
    8     | expr . MUL expr

    PLUS  shift, and go to state 20
    MUL   shift, and go to state 21
    ')'   shift, and go to state 24


State 19

    7 expr: expr . PLUS expr
    8     | expr . MUL expr
    9     | '(' expr . ')'

    PLUS  shift, and go to state 20
    MUL   shift, and go to state 21
    ')'   shift, and go to state 25


State 20

    7 expr: expr PLUS . expr

    ID   shift, and go to state 13
    NUM  shift, and go to state 14
    '('  shift, and go to state 15

    expr  go to state 26


State 21

    8 expr: expr MUL . expr

    ID   shift, and go to state 13
    NUM  shift, and go to state 14
    '('  shift, and go to state 15

    expr  go to state 27


State 22

    4 stmt: ID ASGN expr ';' .

    $default  reduce using rule 4 (stmt)


State 23

    5 stmt: READ '(' ID ')' . ';'

    ';'  shift, and go to state 28


State 24

    6 stmt: WRITE '(' expr ')' . ';'

    ';'  shift, and go to state 29


State 25

    9 expr: '(' expr ')' .

    $default  reduce using rule 9 (expr)


State 26

    7 expr: expr . PLUS expr
    7     | expr PLUS expr .
    8     | expr . MUL expr

    PLUS  shift, and go to state 20
    MUL   shift, and go to state 21

    PLUS      [reduce using rule 7 (expr)]
    MUL       [reduce using rule 7 (expr)]
    $default  reduce using rule 7 (expr)


State 27

    7 expr: expr . PLUS expr
    8     | expr . MUL expr
    8     | expr MUL expr .

    PLUS  shift, and go to state 20
    MUL   shift, and go to state 21

    PLUS      [reduce using rule 8 (expr)]
    MUL       [reduce using rule 8 (expr)]
    $default  reduce using rule 8 (expr)


State 28

    5 stmt: READ '(' ID ')' ';' .

    $default  reduce using rule 5 (stmt)


State 29

    6 stmt: WRITE '(' expr ')' ';' .

    $default  reduce using rule 6 (stmt)
